--- a/OrderTechnicalTest/appsettings.json
+++ b/OrderTechnicalTest/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;port=3306;database=orders_db;user=root;password=password"
+    "DefaultConnection": "server=localhost;port=3306;database=orders_db;user=root;password=12345678"
   }
 }
